Update giao diện mới lần 2
Xóa toàn bộ giao diện CoreUI thay bằng Bootstrap

--- a/reactjs/src/scss/_custom.scss
+++ b/reactjs/src/scss/_custom.scss
@@ -1,1 +1,8 @@
 // Here you can add other styles
+// .btn-primary {
+//     &:hover {
+//         background-color: $hover-btn-bg;
+//         border-color: $hover-btn-bg;
+//         box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.16);
+//     } 
+// }
