--- a/reactjs/src/scss/_modal.scss
+++ b/reactjs/src/scss/_modal.scss
@@ -118,6 +118,7 @@
 // Title text within header
 .modal-title {
   margin-bottom: 0;
+  color: $white;
   columns: $white;
   line-height: $modal-title-line-height;
 }
