--- a/reactjs/src/scss/_variables.scss
+++ b/reactjs/src/scss/_variables.scss
@@ -47,6 +47,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #34BEAE !default;
 $cyan:    #0dcaf0 !default;
+$hover-btn-bg: #67F3C9 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
