Cập nhật giao diện lần 3
Thêm giao diện phần bảng tin và nhiều cái nữa không nhớ :v:

--- a/reactjs/src/scss/_custom.scss
+++ b/reactjs/src/scss/_custom.scss
@@ -6,3 +6,10 @@
 //         box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.16);
 //     } 
 // }
+
+// option {
+//     padding-top: 2rem;
+//     &:hover {
+//         background-color: $body-bg;
+//     }
+// }
