--- a/reactjs/src/scss/_custom.scss
+++ b/reactjs/src/scss/_custom.scss
@@ -1,15 +1,31 @@
-// Here you can add other styles
-// .btn-primary {
-//     &:hover {
-//         background-color: $hover-btn-bg;
-//         border-color: $hover-btn-bg;
-//         box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.16);
-//     } 
-// }
-
-// option {
-//     padding-top: 2rem;
-//     &:hover {
-//         background-color: $body-bg;
-//     }
-// }
+.item {
+    position: relative;
+    background: #ffffff;
+    box-shadow: 0px 4px 4px rgba(98, 173, 241, 0.28);
+    border-radius: 1.5rem;
+    margin-bottom: 1rem;
+    padding: 1rem 0;
+    overflow: hidden;
+    &:hover {
+        transform: scale(1.005);
+        box-shadow: 0px 6px 4px rgba(103, 243, 201, 0.63);
+    }
+    &::before {
+        position: absolute;
+        left: -0.35%;
+        right: 96.45%;
+        top: -41.41%;
+        bottom: -7.62%;
+        content: "";
+        width: 2rem;
+        height: auto;
+        background: linear-gradient(180deg, #2391f5 0%, #67f3c9 100%);
+        transform: rotate(15deg);
+        border-top: transparent;
+        border-left: transparent;
+    }
+    > .more {
+        position: absolute;
+        right: 1rem;
+    }
+}
