Cập nhật code bởi Song Toàn
- Cập nhật thêm package animation: https://animate.style/
- Cập nhật thêm package react-transition-group (vẫn chưa thuần thục cách sử dụng): http://reactcommunity.org/react-transition-group/
- Cập nhật AppSearch
- Cập nhật AppPagination
- Cập nhật code phần Nhân viên

--- a/reactjs/src/scss/_pagination.scss
+++ b/reactjs/src/scss/_pagination.scss
@@ -1,6 +1,7 @@
 .pagination {
   display: flex;
   @include list-unstyled();
+  box-shadow: 0px 4px 4px rgba(98, 173, 241, 0.33);
 }
 
 .page-link {
