--- a/reactjs/src/scss/style.scss
+++ b/reactjs/src/scss/style.scss
@@ -44,6 +44,8 @@
 @import "spinners";
 @import "offcanvas";
 @import "scrollbar";
+@import "cursor";
+@import "animation";
 
 // Helpers
 @import "helpers";
@@ -52,6 +54,6 @@
 @import "utilities/api";
 
 // Custom
-@import "custom";
+@import "employees";
 
 // scss-docs-end import-stack
