--- a/reactjs/src/scss/_variables.scss
+++ b/reactjs/src/scss/_variables.scss
@@ -48,6 +48,7 @@ $green:   #198754 !default;
 $teal:    #34BEAE !default;
 $cyan:    #0dcaf0 !default;
 $hover-btn-bg: #67F3C9 !default;
+$darkBlue: #2F6BB1 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -78,6 +79,7 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
+$darkBlue: $darkBlue !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -89,7 +91,8 @@ $theme-colors: (
   "warning":          $warning,
   "danger":           $danger,
   "light":            $light,
-  "dark":             $dark
+  "dark":             $dark,
+  "darkBlue":         $darkBlue 
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -375,7 +378,7 @@ $border-color:                $linear !default;
 
 // scss-docs-start border-radius-variables
 $border-radius:               .5rem !default;
-$border-radius-sm:            .2rem !default;
+$border-radius-sm:            .5rem !default;
 $border-radius-lg:            .3rem !default;
 $border-radius-pill:          50rem !default;
 // scss-docs-end border-radius-variables
@@ -435,7 +438,7 @@ $font-size-lg:                $font-size-base * 1.25 !default;
 
 $font-weight-lighter:         lighter !default;
 $font-weight-light:           300 !default;
-$font-weight-normal:          400 !default;
+$font-weight-normal:          500 !default;
 $font-weight-bold:            700 !default;
 $font-weight-bolder:          bolder !default;
 
