--- a/reactjs/src/scss/_pagination.scss
+++ b/reactjs/src/scss/_pagination.scss
@@ -1,16 +1,21 @@
 .pagination {
   display: flex;
+  padding: .25rem .5rem;
+  border-radius: 2rem;
   @include list-unstyled();
-  box-shadow: 0px 4px 4px rgba(98, 173, 241, 0.33);
+  background-color: $white;
 }
 
 .page-link {
   position: relative;
   display: block;
   color: $pagination-color;
+  font-weight: bolder;
   text-decoration: if($link-decoration == none, null, none);
   background-color: $pagination-bg;
-  border: $pagination-border-width solid $pagination-border-color;
+  border-radius: 50%;
+  margin: 0rem 1rem;
+  // border: $pagination-border-width solid $pagination-border-color;
   @include transition($pagination-transition);
 
   &:hover {
@@ -38,7 +43,7 @@
   &.active .page-link {
     z-index: 3;
     color: $pagination-active-color;
-    @include gradient-bg($pagination-active-bg);
+    background-image: linear-gradient(180deg, $start-linear 0%, $end-linear 100%);;
     border-color: $pagination-active-border-color;
   }
 
