--- a/reactjs/src/scss/_variables.scss
+++ b/reactjs/src/scss/_variables.scss
@@ -215,7 +215,7 @@ $escaped-characters: (("<", "%3c"), (">", "%3e"), ("#", "%23"), ("(", "%28"), ("
 //
 // Quickly modify global styling by enabling or disabling optional features.
 
-$enable-caret: true !default;
+$enable-caret: false !default;
 $enable-rounded: true !default;
 $enable-shadows: false !default;
 $enable-gradients: false !default;
@@ -1036,12 +1036,12 @@ $dropdown-dark-header-color: $gray-500 !default;
 // scss-docs-start pagination-variables
 $pagination-padding-y: 0.375rem !default;
 $pagination-padding-x: 0.75rem !default;
-$pagination-padding-y-sm: 0.25rem !default;
-$pagination-padding-x-sm: 0.5rem !default;
-$pagination-padding-y-lg: 0.75rem !default;
-$pagination-padding-x-lg: 1.5rem !default;
+$pagination-padding-y-sm: 0.2rem !default;
+$pagination-padding-x-sm: 0.4rem !default;
+$pagination-padding-y-lg: 0.5rem !default;
+$pagination-padding-x-lg: 1rem !default;
 
-$pagination-color: $link-color !default;
+$pagination-color: $body-color !default;
 $pagination-bg: $white !default;
 $pagination-border-width: $border-width !default;
 $pagination-border-radius: $border-radius !default;
