--- a/reactjs/src/scss/_variables.scss
+++ b/reactjs/src/scss/_variables.scss
@@ -39,6 +39,7 @@ $grays: (
 $start-linear: #0b7ce3;
 $end-linear: #67f3c9;
 $linear: linear-gradient(to right, $start-linear 25%, $end-linear 125%) !default;
+$linear2: linear-gradient($start-linear 25%, $end-linear 125%) !default;
 $blue:    #2B99FF !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
@@ -56,6 +57,7 @@ $darkBlue: #2F6BB1 !default;
 // scss-docs-start colors-map
 $colors: (
   "linear": $linear,
+  "linear2":$linear2,
   "blue": $blue,
   "indigo": $indigo,
   "purple": $purple,
@@ -219,6 +221,7 @@ $enable-caret: true !default;
 $enable-rounded: true !default;
 $enable-shadows: false !default;
 $enable-gradients: false !default;
+$enable-pagination-gradients: true !default;
 $enable-transitions: true !default;
 $enable-reduced-motion: true !default;
 $enable-smooth-scroll: true !default;
@@ -240,6 +243,7 @@ $variable-prefix: bs- !default;
 // This gradient is also added to elements with `.bg-gradient`
 // scss-docs-start variable-gradient
 $gradient: $linear !default;
+$gradient2: $linear2 !default;
 // scss-docs-end variable-gradient
 
 // Spacing
@@ -286,7 +290,7 @@ $body-text-align: null !default;
 //
 // Style anchor elements.
 
-$link-color: $primary !default;
+$link-color: $darkBlue !default;
 $link-decoration: underline !default;
 $link-shade-percentage: 20% !default;
 $link-hover-color: shift-color($link-color, $link-shade-percentage) !default;
@@ -356,6 +360,7 @@ $container-padding-x: $grid-gutter-width * 0.5 !default;
 
 // scss-docs-start border-variables
 $border-width: 1px !default;
+$pag-margin-start: 10px !default;
 $border-widths: (
   1: 1px,
   2: 2px,
@@ -368,10 +373,11 @@ $border-color: $linear !default;
 // scss-docs-end border-variables
 
 // scss-docs-start border-radius-variables
-$border-radius:               .5rem !default;
+$border-radius:               .5rem!default;
 $border-radius-sm:            .5rem !default;
 $border-radius-lg:            .3rem !default;
 $border-radius-pill:          50rem !default;
+$border-radius-circle:          50% !default;
 // scss-docs-end border-radius-variables
 
 // scss-docs-start box-shadow-variables
@@ -424,7 +430,7 @@ $font-family-code: var(--#{$variable-prefix}font-monospace) !default;
 // $font-size-base affects the font size of the body text
 $font-size-root:              null !default;
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
-$font-size-sm:                $font-size-base * .875 !default;
+$font-size-sm:                $font-size-base * .775 !default;
 $font-size-lg:                $font-size-base * 1.25 !default;
 
 $font-weight-lighter:         lighter !default;
@@ -1034,7 +1040,7 @@ $dropdown-dark-header-color: $gray-500 !default;
 // scss-docs-start pagination-variables
 $pagination-padding-y: 0.375rem !default;
 $pagination-padding-x: 0.75rem !default;
-$pagination-padding-y-sm: 0.25rem !default;
+$pagination-padding-y-sm: 0.05rem !default;
 $pagination-padding-x-sm: 0.5rem !default;
 $pagination-padding-y-lg: 0.75rem !default;
 $pagination-padding-x-lg: 1.5rem !default;
@@ -1042,8 +1048,8 @@ $pagination-padding-x-lg: 1.5rem !default;
 $pagination-color: $link-color !default;
 $pagination-bg: $white !default;
 $pagination-border-width: $border-width !default;
-$pagination-border-radius: $border-radius !default;
-$pagination-margin-start: -$pagination-border-width !default;
+$pagination-border-radius: $border-radius-circle !default;
+$pagination-margin-start: $pag-margin-start !default;
 $pagination-border-color: $gray-300 !default;
 
 $pagination-focus-color: $link-hover-color !default;
