--- a/reactjs/src/scss/_list-group.scss
+++ b/reactjs/src/scss/_list-group.scss
@@ -9,7 +9,9 @@
   // No need to set list-style: none; since .list-group-item is block level
   padding-left: 0; // reset padding because ul and ol
   margin-bottom: 0;
-  @include border-radius($list-group-border-radius);
+  border: $list-group-border-width solid $list-group-border-color;
+  z-index:1080;
+  // @include border-radius($list-group-border-radius);
 }
 
 .list-group-numbered {
@@ -61,7 +63,7 @@
   color: $list-group-color;
   text-decoration: if($link-decoration == none, null, none);
   background-color: $list-group-bg;
-  border: $list-group-border-width solid $list-group-border-color;
+  // border: $list-group-border-width solid $list-group-border-color;
 
   &:first-child {
     @include border-top-radius(inherit);
