--- a/reactjs/src/scss/mixins/_buttons.scss
+++ b/reactjs/src/scss/mixins/_buttons.scss
@@ -84,6 +84,7 @@
 ) {
   color: $color;
   border-color: $color;
+  background-color: $white;
 
   &:hover {
     color: $white;
@@ -93,7 +94,7 @@
 
   .btn-check:focus + &,
   &:focus {
-    box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
+    // box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
   }
 
   .btn-check:checked + &,
@@ -101,16 +102,16 @@
   &:active,
   &.active,
   &.dropdown-toggle.show {
-    color: $white;
-    background-color: $active-background;
-    border-color: $active-border;
+    color: $green;
+    background-color: $hover-btn-bg;
+    border-color: $green;
 
     &:focus {
       @if $enable-shadows {
-        @include box-shadow($btn-active-box-shadow, 0 0 0 $btn-focus-width rgba($color, .5));
+        // @include box-shadow($btn-active-box-shadow, 0 0 0 $btn-focus-width rgba($color, .5));
       } @else {
         // Avoid using mixin so we can pass custom focus shadow properly
-        box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
+        // box-shadow: 0 0 0 $btn-focus-width rgba($green, .5);
       }
     }
   }
@@ -118,7 +119,7 @@
   &:disabled,
   &.disabled {
     color: $color;
-    background-color: transparent;
+    background-color: $white;
   }
 }
 // scss-docs-end btn-outline-variant-mixin
