update code task

--- a/reactjs/src/scss/_variables.scss
+++ b/reactjs/src/scss/_variables.scss
@@ -102,6 +102,7 @@ $theme-colors: (
   "darkBlue": $darkBlue,
   "blue": $blue,
   "grayBlue": $grayBlue,
+  "teal":$teal
 ) !default;
 // scss-docs-end theme-colors-map
 
